<resources>
    <string name="app_name">smms</string>

    <!--    Errors-->
    <string name="invalid_email">E-mail inválido.</string>
    <string name="text_invalid">Texto inválido</string>

    <string name="facebook">Facebook</string>
    <string name="count_friends">Quantidade de seguidores</string>
    <string name="analitycs">Analitycs</string>
    <string name="new_post">New Post</string>
    <string name="publish">Publicar</string>
    <string name="category">Categoria</string>
    <string name="annotation_hint">E.g.: UnB, Universidade de Brasília</string>
    <string name="annotations">Anotações</string>
    <string name="annotation">Anotação</string>
    <string name="text_post_hint">O que você quer publicar?</string>
    <string name="upload_text">Clique para adicionar uma foto</string>
    <string name="annotation_div">\n.\n.\n.\n.\n.\n</string>
    <string name="insights_interaction">Quantidade de interações</string>
    <string name="instagram">Instagram</string>
    <string name="impressions">Impressões</string>
    <string name="likes">Curtidas</string>
    <string name="comments">Comentários</string>
    <string name="select_period">Selecione um período</string>
    <string name="title">Título</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="select_share">Selecione onde compartilhar</string>
    <string name="instagram_story">Instagram - Story</string>
    <string name="schedule">Agendar</string>

    <string-array name="string_array_metrics">
        <item>Dia</item>
        <item>Mês</item>
        <item>Ano</item>
    </string-array>

    <string-array name="string_array_categories">
        <item>Saúde</item>
        <item>Esporte</item>
        <item>Universidade</item>
    </string-array>

    <string name="more_info"><![CDATA[Mais informações >]]></string>
    <string name="posts_scheduler"><![CDATA[Agenda de publicações >]]></string>
    <string name="scheduler">Agenda</string>
    <string name="platform">Plataforma:</string>
    <string name="confirm_post">Postar publicação</string>
    <string name="body_confirmation">Gostaria de postar a publicação com título %1$s agora?</string>
    <string name="cancel">Cancelar</string>
    <string name="remove">Excluir</string>
    <string name="no_pending_posts">Não existem publicações pendentes.</string>
    <string name="search">Pesquisar</string>
    <string name="part_of_post">Trecho do post...</string>


</resources>
